replace redirect with correct characters

--- a/templates/external.html
+++ b/templates/external.html
@@ -13,8 +13,8 @@
     <div class="container">	
   		<div class="row">
   			<div class="jumbotron">
-  			  <h1>Welcome To Video Manager</h1>
-  			  <p>Login in with your google account to get started</p>
+  			  <h1>Drive Video List</h1>
+  			  <p>Login in with your google account to view mp4 files in your drive account.</p>
   			  <p><a  id="login_button" class="btn btn-primary btn-lg" role="button"><span class="glyphicon glyphicon-user"></span>  Login</a></p>
   			</div>
   		</div>
