took out a lot of superfluous junk

--- a/templates/list.html
+++ b/templates/list.html
@@ -11,7 +11,8 @@
   <body>
 
     <div class="container">	
-      
+      <h1>Below are all the mp4 files that you have in your drive account</h1>
+      <hr>
       {{#each videos}}
       <div class="row">
         <div class="col-md-8">
@@ -22,7 +23,7 @@
           </video>
         </div>
         <div class="col-md-4">
-          <h1>{{originalFilename}}</h1>
+          <h3>{{originalFilename}}</h3>
         </div>
 
           
